# screen-tune

./: LICENSE  README.md
dev/: dev.py  dev.test.py
extras/: icon.psd
frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/public/i18n/: en.json  ru.json
frontend/src/: declarations.d.ts  index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/decorators/: is-pywebview.decorator.ts  validate.decorator.ts
frontend/src/app/core/enums/: app-urls.enum.ts
frontend/src/app/core/interfaces/: config.ts  pywebview.ts  version-check.ts
frontend/src/app/core/services/app-api/: app-api.interface.ts  (+2 more)
frontend/src/app/header/: header.component.html  header.component.scss  header.component.ts
frontend/src/app/main/: main.component.html  main.component.scss  main.component.ts
frontend/src/app/new-version-dialog/: new-version-dialog.component.html  new-version-dialog.component.spec.ts  new-version-dialog.component.ts
pywebview/: build.py  config.json  convert_icon.py  pyproject.toml  requirements.txt
pywebview/src/: api.py  autorun.py  autorun_manager.py  config.py  env.py  environment.py  event_handler.py  gdi32.py  gdi32_wrapper.py  main.py  main_window.py  translate.py
pywebview/src/functions/: check_latest_release.py  get_active_window_process.py  get_active_window_process_name.py  get_app_version.py  get_display_names.py  get_process_names.py
pywebview/src/platform_api/: __init__.py  linux.py  linux_via_terminal.py  windows.py
