[project]
name = "screen-tune"
version = "1.2.3"
description = "App provides controls over PC displays color settings (brightness, contrast, gamma) depending on active window."
authors = [
    {name = "Eugene Savin", email = "evgeny.savin.ad@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.21.0"
]
requires-python = ">=3.11"
urls = {Homepage = "https://github.com/Quenary/screen-tune"}